Mon Dec 22 16:32:21 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): encoding of packed string only from 'm',
	  'M', and 'u' should be US-ASCII.  [ruby-dev:37284]

	* pack.c (pack_pack): encoding of packed string only from 'U'
	  should be UTF-8.  also upgrade US-ASCII strings to UTF-8.

Sat Dec 27 09:14:17 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* cont.c: rdoc for Fiber. patch by Muhammad Ali.
	  [ruby-core:20894]

Fri Dec 26 18:04:10 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (fptr_finalize): don't allocate objects if noraise.
	  (finish_writeconv): add noalloc argument to be able to avoid
	  object allocation.
	  (finish_writeconv_arg): introduced again.
	  (finish_writeconv_sync): follow the above change.

Mon Dec 22 09:54:43 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (gettable_gen): the encoding of __FILE__ should be
	  rb_filesystem_encoding().  [ruby-list:45733]

	* parse.y (gettable_gen): __FILE__ should be ASCII-8BIT when
	  filesystem encoding is US-ASCII and __FILE__ contains non 7bit
	  characters.

Fri Dec 26 15:50:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::List#summarize): gives priority
	  to latter switches.  [ruby-dev:36692]

	* lib/optparse.rb (OptionParser#summarize): do not append
	  unnecessary line terminator.

Fri Dec 26 14:01:38 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (fptr_finalize): close the IO object even if finish_writeconv or
	  flush is failed.
	  (finish_writeconv): don't raise.  return errno or exception.
	  (finish_writeconv_arg): removed.
	  (finish_writeconv_sync): follow finish_writeconv change.

	* transcode.c (rb_econv_make_exception): new function.

	* include/ruby/encoding.h (rb_econv_make_exception): declared.

Fri Dec 26 17:04:14 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/input-method.rb (IRB::StdioInputMethod#initialize):
	  removed a 'p' for debugging.

Thu Dec 25 20:57:01 2008  NARUSE, Yui  <naruse@ruby-lang.org>
